fix uneven header row spacing

--- a/feed.css
+++ b/feed.css
@@ -38,6 +38,7 @@
 
 .feed-header img{
     width: 45px;
+    height: 45px;
     border-radius: 50%;
     margin-right: 10px;
 }
